package com.example.newsapp.util

object Constants {
    const val PAGE_SIZE_REQUEST = "pageSize"
    const val PAGE_REQUEST = "page"
    const val KEYWORD_REQUEST = "q"
    const val DEFAULT_PAGE_SIZE_REQUEST = 5
    const val API_KEY_REQUEST = "apiKey"
    const val SEARCH_BAR_TEST_TAG = "search_bar"
    const val HOME_LAZY_COLUMN_TEST_TAG = "home_lazy_column"
    const val DETAIL_NEWS_BUTTON_READ_ORIGIN_TEST_TAG = "detail_news_button_read_origin"
    const val BOOKMARK_LIST_TEST_TAG = "bookmark_list_test_tag"
}