<resources>
    <string name="app_name">NewsApp</string>
    <string name="profile_name">Jeremia S.P. Sibarani</string>
    <string name="profile_email">sibaranigreamjeremia@gmail.com</string>
    <string name="profile_description">My current passion lies in software development, with a particular focus on mobile apps. As of now, I am engaged in experimenting with Android development to enhance my skills and knowledge in this field.</string>
    <string name="profile_title">Profile</string>
    <string name="placeholder_search_bar_text">Search news here</string>
    <string name="menu_home">Home</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_profile">Profile</string>
    <string name="search_placeholder">Search news</string>
    <string name="no_data_found">No data found</string>
    <string name="read_origin">Read origin</string>
    <string name="bookmark_icon_content_description">Bookmark</string>
    <string name="clear_search_bar">Clear search</string>
    <string name="profile_icon_content_description">About page</string>
</resources>